--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=simple-task-manager
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
+spring.datasource.username=purplewave
+spring.datasource.password=SpringMonkey$$88
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
